User a platform thread for the session event loop